kustomization/python-hello-world/overlays/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-demo
  namespace: learning-space
spec:
  rules:
    - host: pyapp.apps.sandbox-m4.g2pi.p1.openshiftapps.com
      http:
        paths:
          - path: /name2
            pathType: Prefix
            backend:
              service:
                name: py-demo
                port:
                  number: 5000
